--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -50,45 +50,33 @@
                         <div class="card-text">Comunidad</div>
                     </a>
                 </div>
-                <div class="card mb-3">
-                    <a th:href="@{/contenidoPremium}">
-                        <img th:src="@{/img/rutinas.jpg}" alt="Receta">
-                        <div class="card-text">Rutinas de ejercicio</div>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="container menu2">
-                <div class="col-md-6 d-flex align-items-center justify-content-center">
-                    <div class="card bg-light mb-3 weight-form-card">
-                        <div class="card-body">
-                            <h5 class="card-title">¿Cuánto pesas el día de hoy?</h5>
-                            <form th:action="@{/cambioPeso}" method="post">
-                                <div class="form-group">
-                                    <label for="nuevoPeso">Peso:</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" id="nuevoPeso" name="nuevoPeso" placeholder="Ingrese su nuevo peso" required>
-                                        <span class="input-group-text">Kg</span>
-                                    </div>
-                                </div>
-                                <button type="submit" class="btn btn-primary mt-3">Actualizar</button>
-                            </form>
-                            <strong th:text="${mensaje}"></strong>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 d-flex align-items-center justify-content-center">
-                    <div class="card bg-light mb-3 weight-stats-card">
-                        <a th:href="@{/estadisticasUsuario}">
-                            <img th:src="@{/img/menuGrafico.jpg}" alt="Estadísticas de tu Peso">
-                            <div class="card-body">
-                                <h5 class="card-title">Estadísticas de tu Peso</h5>
-                                <p class="card-text">Aquí puedes encontrar las estadísticas de tu peso y tu progreso a lo largo del tiempo.</p>
+
+             <div class="card">
+                                <div class="card-body">
+                                                          <h5 class="card-title">¿Cuánto pesas el día de hoy?</h5>
+                                                          <form th:action="@{/cambioPeso}" method="post">
+                                                              <div class="form-group">
+                                                                  <label for="nuevoPeso">Peso:</label>
+                                                                  <div class="input-group">
+                                                                      <input type="number" class="form-control" id="nuevoPeso" name="nuevoPeso" placeholder="Ingrese su nuevo peso" required>
+                                                                      <span class="input-group-text">Kg</span>
+                                                                  </div>
+                                                              </div>
+                                                              <button type="submit" class="btn btn-primary mt-3">Actualizar</button>
+                                                          </form>
+                                                          <strong th:text="${mensaje}"></strong>
+                                                      </div>
                             </div>
-                        </a>
-                    </div>
-                </div>
+            <div class="card mb-3">
+                                <a th:href="@{/estadisticasUsuario}">
+                                    <img th:src="@{/img/menuGrafico.jpg}" alt="Estadísticas de tu Peso">
+                                    <h5 class="card-text">Estadísticas de tu Peso</h5>
+                                </a>
+                            </div>
+            </div>
+
         </div>
+
     </div>
 
     <footer th:replace="footer :: footer"></footer>
@@ -210,19 +198,5 @@
         text-decoration: none;
     }
 
-    .weight-form-card {
-        height: 300px;
-        width: 500px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
 
-    .weight-stats-card {
-        height: 400px;
-        width: 600px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
 </style>
