--- a/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
@@ -17,6 +17,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
     <style>
+       .subir {
+           position: fixed;
+           bottom: 20px;
+           right: 20px;
+           padding: 10px; /* Padding para el contenedor */
+           margin: 0; /* Margin para el contenedor */
+           z-index: 1000; /* Asegura que esté por encima de otros elementos */
+           background-color: rgba(255, 255, 255, 0.8); /* Fondo con un poco de transparencia */
+           border-radius: 8px; /* Bordes redondeados */
+           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+       }
         .post-card {
             max-width: 720px;
             margin: 0 auto;
@@ -70,7 +81,9 @@
     <div class="ms-2 p-2">
         <h6 class="fw-bold"><a th:href="@{/home}" style="color: #5FB92E;">Home</a> > Comunidad</h6>
     </div>
-
+  <div class="subir d-flex justify-content-end">
+            <a class="btn btn-success" th:href="@{/subirPublicacion}">Subir Publicacion</a>
+        </div>
     <div class="container my-5" style="min-height: 60vh;">
         <h2 class="text-center fw-bold mb-3">Publicaciones de la Comunidad</h2>
         <div th:if="${#lists.isEmpty(publicaciones)}" class="container mx-3 my-3">
@@ -101,9 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-end">
-            <a class="btn btn-success" th:href="@{/subirPublicacion}">Subir Publicacion</a>
-        </div>
+
     </div>
 
     <div th:replace="footer :: footer"></div>
@@ -115,6 +126,20 @@
                 return new bootstrap.Tooltip(tooltipTriggerEl);
             });
         });
+
+            window.addEventListener('scroll', function() {
+                var footer = document.querySelector('footer');
+                var button = document.querySelector('.subir');
+                var footerRect = footer.getBoundingClientRect();
+                var buttonRect = button.getBoundingClientRect();
+
+                if (footerRect.top < window.innerHeight) {
+                    button.style.bottom = (window.innerHeight - footerRect.top + 20) + 'px';
+                } else {
+                    button.style.bottom = '20px';
+                }
+            });
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
