--- a/src/main/webapp/WEB-INF/views/thymeleaf/misEjercicios.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misEjercicios.html
@@ -15,51 +15,57 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div th:replace="navbar :: navbar"></div>
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12">
-                <div class="list-group flex-row justify-content-center">
-                    <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
-                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
-                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
-                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
-                    <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
-                    <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action activo">CALENDARIO</a>
-                    <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+    <div class="d-flex flex-column min-vh-100">
+        <div class="container flex-grow-1">
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <div class="list-group flex-row justify-content-center">
+                        <a th:href="@{/home}" class="list-group-item list-group-item-action">MI FATLOSS</a>
+                        <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
+                        <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                        <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                        <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                        <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action activo">CALENDARIO</a>
+                        <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+                    </div>
+                </div>
+            </div>
+
+            <div style="margin-left: 20px; padding: 10px;">
+                <p>
+                    <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
+                    <span><a th:href="@{/calendarioDieta}" style="color: green;">Calendario</a></span> > Mis ejercicios
+                </p>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <h2>Mis ejercicios <span th:text="${fecha}"></span></h2>
+                    <ul>
+                        <li th:each="ejercicio : ${ejercicios}">
+
+                            <span th:text="${ejercicio.ejercicio.nombre}"></span>
+                            - <span th:text="'Minutos empleados: ' + ${ejercicio.minutos}"></span>
+                            - <span th:text="'Calorias quemadas: ' + ${ejercicio.caloriasQuemadas}"></span>
+                          <a th:href="@{/misEjercicios/eliminarEjercicio/{idEjercicioUsuario}/{fecha}/(idEjercicioUsuario=${ejercicio.id},fecha=${fecha})}" class="btn btn-danger eliminarAlimento" onclick="return confirmDelete()">x</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
 
-        <div style="margin-left: 20px; padding: 10px;">
-            <p>
-                <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
-                <span><a th:href="@{/calendarioDieta}" style="color: green;">Calendario</a></span> > Mis ejercicios
-            </p>
-        </div>
-
-        <div class="container">
-      <div class="row justify-content-center">
-          <div class="col-md-8">
-              <h2>Mis ejercicios <span th:text="${fecha}"></span></h2>
-              <ul>
-                  <li th:each="ejercicio : ${ejercicios}">
-                <!--      <a th:href="@{verEjercicio(id=${ejercicio.id})}">
-                          <span th:text="${ejercicio.ejercicio.nombre}"></span>
-                      </a> -->
-                      <span th:text="${ejercicio.ejercicio.nombre}"></span>
-                      - <span th:text="'Minutos empleados: ' + ${ejercicio.minutos}"></span>
-                      - <span th:text="'Calorias quemadas: ' + ${ejercicio.caloriasQuemadas}"></span>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </div>
-    <div th:replace="footer :: footer"></div>
+        <div th:replace="footer :: footer"></div>
+    </div>
+ <script>
+        function confirmDelete() {
+            return confirm('¿Estás seguro de que quieres eliminar este ejercicio?');
+        }
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
