--- a/src/main/webapp/WEB-INF/views/thymeleaf/misAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misAlimentos.html
@@ -18,59 +18,68 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div th:replace="navbar :: navbar"></div>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12">
-                <div class="list-group flex-row justify-content-center">
-                    <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
-                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
-                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
-                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
-                    <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
-                    <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action activo">CALENDARIO</a>
-                    <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+    <div class="d-flex flex-column min-vh-100">
+        <div>
+            <div th:replace="navbar :: navbar"></div>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12">
+                        <div class="list-group flex-row justify-content-center">
+                            <a th:href="@{/home}" class="list-group-item list-group-item-action">MI FATLOSS</a>
+                            <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
+                            <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                            <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                            <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                            <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action activo">CALENDARIO</a>
+                            <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div style="margin-left: 20px; padding: 10px;">
+                    <p>
+                        <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
+                        <span><a th:href="@{/calendarioDieta}" style="color: green;">Calendario</a></span> > Mis alimentos
+                    </p>
+                </div>
+
+                <div th:if="${mensajeAlimentoModificado}" class="alert alert-success" role="alert">
+                    <p th:text="${mensajeAlimentoModificado}"></p>
+                </div>
+                <div th:if="${mensajeAlimentoAgregado}" class="alert alert-success" role="alert">
+                    <p th:text="${mensajeAlimentoAgregado}"></p>
+                </div>
+
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8">
+                            <h2>Alimentos consumidos el <span th:text="${fecha}"></span></h2>
+                            <ul>
+                                <li th:each="colacion : ${colaciones}">
+                                    <a th:href="@{/alimentos/{id}(id=${colacion.alimentos.id}, from='misAlimentos')}">
+                                        <span th:text="${colacion.alimentos.nombre}"></span> </a> -
+                                    <span th:text="'Cantidad consumida: ' + ${colacion.cantidad}"></span> -
+                                    <span th:text="'Calorias: ' + ${colacion.alimentos.energia}"></span>
+                                    <a th:href="@{/misAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${colacion.alimentos.id},tipoColacion=${colacion.tipo},fecha=${fecha})}" class="btn btn-danger eliminarAlimento" onclick="return confirmDelete()">x</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="mt-auto">
+            <div th:replace="footer :: footer"></div>
+        </div>
+    </div>
 
-        <div style="margin-left: 20px; padding: 10px;">
-            <p>
-                <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
-                <span><a th:href="@{/calendarioDieta}" style="color: green;">Calendario</a></span> > Mis alimentos
-            </p>
-        </div>
-
-        <div th:if="${mensajeAlimentoModificado}" class="alert alert-success" role="alert">
-            <p th:text="${mensajeAlimentoModificado}"></p>
-        </div>
-        <div th:if="${mensajeAlimentoAgregado}" class="alert alert-success" role="alert">
-            <p th:text="${mensajeAlimentoAgregado}"></p>
-        </div>
-
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <h2>Alimentos consumidos el <span th:text="${fecha}"></span></h2>
-                    <ul>
-                        <li th:each="colacion : ${colaciones}">
-                            <a th:href="@{/alimentos/{id}(id=${colacion.alimentos.id}, from='misAlimentos')}">
-                                <span th:text="${colacion.alimentos.nombre}"></span> </a> -
-                            <span th:text="'Cantidad consumida: ' + ${colacion.cantidad}"></span> -
-                            <span th:text="'Calorias: ' + ${colacion.alimentos.energia}"></span>
-                            <a th:href="@{/misAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${colacion.alimentos.id},tipoColacion=${colacion.tipo},fecha=${fecha})}" class="btn btn-danger eliminarAlimento" onclick="return confirmDelete()">x</a>
-                    </ul>
-                </div>
-            </div>
-            </div>
-        </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script>
-            function confirmDelete() {
-                return confirm('¿Estás seguro de que quieres eliminar este alimento?');
-            }
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        function confirmDelete() {
+            return confirm('¿Estás seguro de que quieres eliminar este alimento?');
+        }
     </script>
 </body>
 </html>
