--- a/src/main/webapp/WEB-INF/views/thymeleaf/misEjercicios.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misEjercicios.html
@@ -17,6 +17,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+<style>
+    .custom-card {
+        width: 50%;
+        margin: auto;
+    }
+
+.exercise-name{
+    font-family: 'Arial', sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #5FB92E;
+}
+</style>
 <body>
     <div th:replace="navbar :: navbar"></div>
 
@@ -42,23 +55,28 @@
             </p>
         </div>
 
-        <div class="container">
-      <div class="row justify-content-center">
-          <div class="col-md-8">
-              <h2>Mis ejercicios <span th:text="${fecha}"></span></h2>
-              <ul>
-                  <li th:each="ejercicio : ${ejercicios}">
-                <!--      <a th:href="@{verEjercicio(id=${ejercicio.id})}">
-                          <span th:text="${ejercicio.ejercicio.nombre}"></span>
-                      </a> -->
-                      <span th:text="${ejercicio.ejercicio.nombre}"></span>
-                      - <span th:text="'Minutos empleados: ' + ${ejercicio.minutos}"></span>
-                      - <span th:text="'Calorias quemadas: ' + ${ejercicio.caloriasQuemadas}"></span>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </div>
+        <div th:if="${mensajeEjercicioAgregado}" class="alert alert-success" role="alert">
+            <p th:text="${mensajeEjercicioAgregado}"></p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+
+        <div class="container" style="min-height: 80vh;">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <h2>Mis ejercicios <span th:text="${fechaFormateada}"></span></h2>
+                    <div th:each="ejercicio : ${ejercicios}" class="card mb-3">
+                        <div class="card-body custom-card">
+                            <h5 class="card-title exercise-name" th:text="${ejercicio.ejercicio.nombre}"></h5>
+                            <p class="card-text">
+                                <span th:text="'Minutos empleados: ' + ${ejercicio.minutos}"></span><br>
+                                <span th:text="'Calorias quemadas: ' + ${ejercicio.caloriasQuemadas}"></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div th:replace="footer :: footer"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
